<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <android.support.v7.widget.CardView
        android:id="@+id/container_basic"
        style="@style/CardViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/header_basic"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/btnHeaderLabel"
                    style="@style/ButtonHeaderStyle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:drawableTint="#ccc"
                    android:text="BASIC DETAILS"
                    android:gravity="center_vertical"
                    android:layout_weight="1"/>

                <TextView
                    android:id="@+id/tvHeaderTotal"
                    style="@style/ButtonHeaderStyle2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:gravity="center_vertical"
                    android:text="@string/default_total_value"
                    android:visibility="gone" />

            </LinearLayout>

            <RelativeLayout
                android:id="@+id/content_basic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:paddingEnd="10dp"
                android:paddingStart="10dp"
                android:visibility="visible">

                <ImageView
                    android:id="@+id/divider1"
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="#ccc"
                    android:contentDescription="@string/description_image_divider" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/label1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/divider1">

                    <EditText
                        android:id="@+id/edittext_basic_salary"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_basic_salary"
                        android:inputType="numberDecimal"
                        android:selectAllOnFocus="true"
                        android:text="@string/default_basic_salary_value" />
                </android.support.design.widget.TextInputLayout>


                <TextView
                    android:id="@+id/tv_sss_label"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_below="@id/label1"
                    android:gravity="start"
                    android:paddingEnd="0dp"
                    android:paddingStart="10dp"
                    android:text="@string/text_sss_contribution"
                    android:textColor="@color/colorAccent"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/textview_sss_contrib"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_above="@+id/textview_philhealth_label"
                    android:layout_alignParentEnd="true"
                    android:layout_below="@id/tv_sss_label"
                    android:gravity="center_vertical"
                    android:paddingEnd="0dp"
                    android:paddingStart="10dp"
                    android:text="@string/default_total_value"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textview_philhealth_label"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_below="@+id/spinner_salary_period"
                    android:gravity="start"
                    android:paddingEnd="0dp"
                    android:paddingStart="10dp"
                    android:text="@string/text_philhealth_contribution"
                    android:textColor="@color/colorAccent"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/textview_philhealth_contrib"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_above="@+id/textview_pagibig_label"
                    android:layout_alignParentEnd="true"
                    android:layout_below="@id/textview_philhealth_label"
                    android:gravity="center_vertical"
                    android:paddingEnd="0dp"
                    android:paddingStart="10dp"
                    android:text="@string/default_total_value"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textview_pagibig_label"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_below="@+id/spinner_employment_status"
                    android:gravity="start"
                    android:paddingEnd="0dp"
                    android:paddingStart="10dp"
                    android:text="@string/text_pag_ibig_contribution"
                    android:textColor="@color/colorAccent"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/textview_pagibig_contrib"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/spinner_civil_status"
                    android:layout_alignParentEnd="true"
                    android:layout_below="@id/textview_pagibig_label"
                    android:gravity="center_vertical"
                    android:paddingEnd="0dp"
                    android:paddingStart="10dp"
                    android:text="@string/default_total_value"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/label_working_days"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/spinner_civil_status"
                    android:paddingEnd="0dp"
                    android:paddingStart="10dp"
                    android:text="@string/text_working_days"
                    android:textColor="@color/colorAccent"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/tv_daily_rate_label"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_below="@id/textview_pagibig_contrib"
                    android:gravity="start"
                    android:paddingEnd="0dp"
                    android:paddingStart="10dp"
                    android:text="@string/text_daily_rate"
                    android:textColor="@color/colorAccent"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/textview_daily_rate"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_below="@+id/tv_daily_rate_label"
                    android:gravity="center_vertical"
                    android:paddingEnd="0dp"
                    android:paddingStart="10dp"
                    android:text="@string/default_total_value"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <Spinner
                    android:id="@+id/spinner_working_days"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/label_working_days"
                    android:layout_toStartOf="@id/textview_sss_contrib"
                    android:drawSelectorOnTop="true"
                    android:entries="@array/string_array_working_days" />


                <TextView
                    android:id="@+id/label2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/label1"
                    android:paddingEnd="0dp"
                    android:paddingStart="10dp"
                    android:text="@string/text_salary_period"
                    android:textColor="@color/colorAccent"
                    android:textSize="12sp" />

                <Spinner
                    android:id="@+id/spinner_salary_period"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/label2"
                    android:layout_toStartOf="@id/textview_sss_contrib"
                    android:drawSelectorOnTop="true"
                    android:entries="@array/string_array_salary_period" />

                <TextView
                    android:id="@+id/label3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/spinner_salary_period"
                    android:paddingEnd="0dp"
                    android:paddingStart="10dp"
                    android:text="@string/text_employment_status"
                    android:textColor="@color/colorAccent"
                    android:textSize="12sp" />

                <Spinner
                    android:id="@+id/spinner_employment_status"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/label3"
                    android:layout_toStartOf="@id/textview_philhealth_contrib"
                    android:drawSelectorOnTop="true"
                    android:entries="@array/string_array_employment_status" />

                <TextView
                    android:id="@+id/label4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/spinner_employment_status"
                    android:paddingEnd="0dp"
                    android:paddingStart="10dp"
                    android:text="@string/text_civil_status"
                    android:textColor="@color/colorAccent"
                    android:textSize="12sp" />

                <Spinner
                    android:id="@+id/spinner_civil_status"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/label4"
                    android:layout_toStartOf="@id/textview_pagibig_contrib"
                    android:drawSelectorOnTop="true"
                    android:entries="@array/string_array_civil_status" />


            </RelativeLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</layout>