<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <android.support.v7.widget.CardView
        style="@style/CardViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/header_add_income"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_header_add_income_label"
                    style="@style/HeaderStyle"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:drawableTint="#555"
                    android:gravity="center_vertical"
                    android:text="@string/text_add_other_income" />

                <Button
                    android:id="@+id/imagebutton_add_income"
                    android:layout_width="30dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:layout_marginBottom="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/bg_btn_selector"
                    android:src="@drawable/ic_add_black_18dp"
                    android:text="@string/text_x"
                    android:textColor="#fff"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:tint="#fff" />
            </LinearLayout>

            <RelativeLayout
                android:id="@+id/content_add_income"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="20dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:visibility="visible">

                <ImageView
                    android:id="@+id/divider"
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="#ccc"
                    android:contentDescription="@string/description_image_divider" />

                <Spinner
                    android:id="@+id/spinner_other_income_type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/divider"
                    android:entries="@string-array/other_income_selection" />

                <ImageView
                    android:id="@+id/divider1"
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_below="@id/spinner_other_income_type"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="10dp"
                    android:background="#ccc"
                    android:contentDescription="@string/description_image_divider" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/container_count"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_below="@id/divider1">

                    <EditText
                        android:id="@+id/edittext_count"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_working_hours"
                        android:inputType="numberDecimal"
                        android:selectAllOnFocus="true" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/container_rate"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_below="@id/divider1">

                    <EditText
                        android:id="@+id/edittext_rate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_rate"
                        android:inputType="numberDecimal"
                        android:selectAllOnFocus="true" />
                </android.support.design.widget.TextInputLayout>

                <include
                    android:id="@+id/holiday_data"
                    layout="@layout/item_other_income_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/divider1"
                    android:visibility="gone" />


            </RelativeLayout>


        </LinearLayout>
    </android.support.v7.widget.CardView>
</layout>