<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <android.support.v7.widget.CardView
        android:id="@+id/container_other_income"
        style="@style/CardViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <LinearLayout
                android:id="@+id/header_misc"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_header_misc_label"
                    style="@style/ButtonHeaderStyle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:drawableTint="#555"
                    android:gravity="center_vertical"
                    android:text="@string/text_header_misc" />

                <TextView
                    android:id="@+id/tv_header_misc_total"
                    style="@style/ButtonHeaderStyle2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:gravity="center_vertical"
                    android:text="@string/default_total_value"
                    android:visibility="gone" />

                <ImageButton
                    android:id="@+id/imagebutton_add_income"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_add_black_18dp"
                    android:tint="#fff"
                    android:background="@drawable/bg_btn_selector"
                    android:layout_margin="10dp"
                    android:visibility="gone"
                    android:contentDescription="@string/description_image_divider" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/content_misc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="20dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:orientation="vertical"
                android:visibility="visible">

                <ImageView
                    android:id="@+id/divider0"
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="#ccc"
                    android:contentDescription="@string/description_image_divider" />

                <android.support.v7.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="100dp"
                    tools:listitem="@layout/item_other_income_layout"
                    >

                </android.support.v7.widget.RecyclerView>
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</layout>